lib/src/compiler/tests/testdata/errors/119.out
error: invalid pattern `$a`
   ╭─[line:3:10]
   │
 3 │     $a = "aa" base64
   │          ──┬─  
   │            ╰─── this pattern is too short
   │ 
   │ Note: `base64` requires that pattern is at least 3 bytes long
───╯
